# fire_robot_ws

./: .gitattributes  .gitignore  README.md
src/fire_robot_bringup/: package.xml  setup.py
src/fire_robot_bringup/launch/: gazebo.launch.py  real_robot.launch.py  simulation.launch.py
src/fire_robot_bringup/rviz/: simulation.rviz
src/fire_robot_bringup/worlds/: corridor.world
src/fire_robot_description/: CMakeLists.txt  package.xml
src/fire_robot_description/config/: robot_controllers.yaml
src/fire_robot_description/launch/: display.launch.py
src/fire_robot_description/urdf/: fire_robot.urdf.xacro
src/fire_robot_fsm/: package.xml  setup.py
src/fire_robot_fsm/fire_robot_fsm/: state_machine_node.py
src/fire_robot_interfaces/: CMakeLists.txt  package.xml
src/fire_robot_interfaces/action/: NavigateToDoor.action
src/fire_robot_interfaces/msg/: DoorInfo.msg  FireInfo.msg  RobotState.msg
src/fire_robot_interfaces/srv/: OpenDoor.srv
src/fire_robot_manipulation/: package.xml  setup.py
src/fire_robot_manipulation/config/: fire_robot.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
src/fire_robot_manipulation/fire_robot_manipulation/: manipulation_node.py
src/fire_robot_manipulation/launch/: move_group.launch.py
src/fire_robot_navigation/: package.xml  setup.py
src/fire_robot_navigation/config/: nav2_params.yaml  slam_toolbox_params.yaml
src/fire_robot_navigation/fire_robot_navigation/: navigation_node.py
src/fire_robot_perception/: package.xml  setup.py
src/fire_robot_perception/config/: training_config.yaml
src/fire_robot_perception/fire_robot_perception/: door_detection_node.py  sensor_fusion_node.py
src/fire_robot_perception/scripts/: prepare_dataset.py  train_door_detector.py
