<?xml version="1.0"?>
<package format="3">
  <name>fire_robot_perception</name>
  <version>0.1.0</version>
  <description>Sensor fusion and door/fire detection for fire robot</description>
  <maintainer email="hjy6881629@gmail.com">fire_robot_team</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>fire_robot_interfaces</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
